# adblock-rust

./: Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  config.example.json
.github/workflows/: build.yml
crates/ars-convert/: Cargo.toml
crates/ars-convert/src/: main.rs  parser.rs
crates/ars-format/: Cargo.toml
crates/ars-format/src/: builder.rs  error.rs  format.rs  lib.rs  reader.rs  rule.rs
crates/dns-server/: Cargo.toml  config.example.toml
crates/dns-server/src/: api_impl.rs  cache.rs  config.rs  dns_codec.rs  handler.rs  main.rs  query_log.rs  upstream.rs
crates/rule-engine/: Cargo.toml
crates/rule-engine/src/: engine.rs  lib.rs  matcher.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: frontend.html  lib.rs
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/stores/: api.js
frontend/src/views/: Dashboard.vue  QueryLog.vue  Rules.vue  Settings.vue
