[workspace]
members = [
    "crates/ars-format",
    "crates/ars-convert",
    "crates/rule-engine",
    "crates/dns-server",
    "crates/web-api",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zstd = "0.13.0"
fst = "0.4.7"
aho-corasick = "1.1.2"
regex = "1.10.2"
bloomfilter = "1.0.13"
crc32fast = "1.4.0"
byteorder = "1.5.0"
clap = { version = "=3.2.25", features = ["derive"] }
bytes = "1.5.0"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
arc-swap = "1.7.0"
parking_lot = "0.12.1"
tiny_http = "0.12"
